--- a/index.html
+++ b/index.html
@@ -2,36 +2,30 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Pawan Pandit | AI Master</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Pawan Pandit | AI Master & Digital Marketing Expert</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      background: #f5f5f5;
       margin: 0;
-      padding: 50px;
+      font-family: 'Poppins', sans-serif;
+      background: #f5f7fa;
+      color: #333;
     }
-    h1 {
-      color: #222;
+    header {
+      background: #1f2937;
+      color: white;
+      padding: 60px 20px;
+      text-align: center;
     }
-    p {
-      font-size: 18px;
-      color: #555;
+    header h1 {
+      font-size: 2.5rem;
+      margin-bottom: 10px;
     }
-    .contact {
-      margin-top: 30px;
+    header p {
+      font-size: 1.2rem;
     }
-  </style>
-</head>
-<body>
-  <h1>Pawan Pandit</h1>
-  <h2>AI Master & Digital Marketing Expert</h2>
-  <p>Welcome to my official website.</p>
-  <div class="contact">
-    <p>Email: pawan@example.com</p>
-    <p>Instagram: @pawan_ai_master</p>
-  </div>
-</body>
-</html>
-
+    section {
+      padding: 60px 20px;
+      max-width: 1000px;
+      margin: …
